syntax = "proto3";

package meshtrade.type.v1;

option go_package = "github.com/meshtrade/api/go/type/v1;typev1";

// Represents a postal address, e.g. for postal delivery or payments addresses.
// Given a postal address, a postal service can deliver items to a premise, P.O.
// Box or similar.
// It is not intended to model geographical locations (roads, towns,
// mountains).
//
// In typical usage an address would be created via user input or from importing
// existing data, depending on the type of process.
//
// Advice on address input / editing:
//  - Use an i18n-ready address widget such as
//    https://github.com/google/libaddressinput)
// - Users should not be presented with UI elements for input or editing of
//   fields outside countries where that field is used.
//
// For more guidance on how to use this schema, please see:
// https://support.google.com/business/answer/6397478
message PostalAddress {
  // Unstructured address lines describing the address.
  // --> Required
  repeated string address_lines = 1;

  // Suburb of the address.
  // --> Optional
  string suburb = 2;

  // City of the address.
  // --> Required
  string city = 3;

  // Province or state of the address
  // --> Required
  string province = 4;

  // Country code of the address in ISO format.
  // CLDR region code of the country/region of the address. This
  // is never inferred and it is up to the user to ensure the value is
  // correct. See http://cldr.unicode.org/ and
  // http://www.unicode.org/cldr/charts/30/supplemental/territory_information.html
  // for details. Example: "CH" for Switzerland.
  // --> Required.
  string country_code = 5;

  // Postal code of the address.
  // --> Optional
  string postal_code = 6;
}
